# dicomconvert

./: LICENSE.md  LICENSE.txt  README.md  README.txt  pyproject.toml  setup.cfg  setup.py
dcmcvt/convert/: fits.py  png.py
dcmcvt/meta/: dicom_meta.yml  info.py
scripts/: dcmcvt
