[metadata]
name = dcmcvt
description = Convert DICOM medical image files to FITS or PNG
long_description = file: README.md
long_description_content_type = text/markdown
author = Eric Jeschke
author_email = eric@naoj.org
license = BSD
license_files = LICENSE.md
url = https://github.com/ejeschke/dicomconvert
edit_on_github = False
github_project = ejeschke/dicomconvert
keywords = DICOM medical imaging convert FITS PNG
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
 
[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    pyyaml>=5.3.1
    pydicom>=2.1.2
    astropy>=3.2.1
    opencv-python>=4.4.0
setup_requires =
    setuptools_scm
include_package_data = True
scripts =
    scripts/dcmcvt

[options.package_data]
dcmcvt = meta/*.yml
